--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -33,11 +33,6 @@
 
 /*Portfolio Images 5480 */
 
-	img.portfolio_images {
-		display: inherit;
-		width: 100%;
-		height: auto;
-	}
 
 	img.portfolio_images_pop {
 		display: block;
@@ -56,116 +51,62 @@
 	transform: scale(1.03);
 	}
 
-	img.portfolio_images_pop.blakesdotcomone {
-		position: absolute;
-		width: 100%;
-		height: auto;
-		transform: scale(1.03);
-		padding-top: 1%;
-		margin-left: auto;
-		margin-right: auto;
-		animation: blakesdotcomonefirst ease-in-out 16s infinite;
-	}
-	@-webkit-keyframes blakesdotcomonefirst {
-		0% {opacity: 1; -webkit-float: left;}
-		46% {opacity: 1; -webkit-float: left;}
-		47% {opacity: 0; -webkit-float: left;}
-		97% {opacity: 0; -webkit-float: left;}
-		98% {opacity: 1; -webkit-float: left;}
-		100% {opacity: 1; -webkit-float: left;}
-	}
-	@keyframes blakesdotcomonefirst {
-		0% {opacity: 1; float: left;}
-		46% {opacity: 1; float: left;}
-		47% {opacity: 0; float: left;}
-		97% {opacity: 0; float: left;}
-		98% {opacity: 1; float: left;}
-		100% {opacity: 1; float: left;}
-	}
+	img.portfolio_images_pop.blgbeyondone {
+	display: block;
+	position: relative;
+	width: 550px;
+	height: auto;
+	padding-top: 1%;
+	margin-left: auto;
+	margin-right: auto;
+	animation: blgbeyondoneone 13s infinite;
+	animation-play-state: initial;
+}
+@-webkit-keyframes blgbeyondoneone {
+	0% {display: inherit;}
+	25% {display: inherit;}
+	26% {display: none;}
+	75% {display: none;}
+	76% {display: inherit;}
+	100% {display: inherit;}
+}
+@keyframes blgbeyondoneone {
+	0% {display: inherit;}
+	25% {display: inherit;}
+	26% {display: none;}
+	75% {display: none;}
+	76% {display: inherit;}
+	100% {display: inherit;}
+}
 
-	img.portfolio_images_pop.blakesdotcomtwo, video.portfolio_image_pop.blakesdotcomtwo  {
-		position: relative;
-		display: inherit;
-		width: 100%;
-		height: auto;
-		transform: scale(1.03);
-		padding-top: 1%;
-		margin-left: auto;
-		margin-right: auto;
-		animation: blakesdotcomtwosecond ease-in-out 16s infinite;
-	}
-	@-webkit-keyframes blakesdotcomtwosecond {
-		0% {opacity: 0; -webkit-float: left;}
-		44% {opacity: 0; -webkit-float: left;}
-		45% {opacity: 1; -webkit-float: left;}
-		98% {opacity: 1; -webkit-float: left;}
-		99% {opacity: 0; -webkit-float: left;}
-		100% {opacity: 0; -webkit-float: left;}
-	}
-	@keyframes blakesdotcomtwosecond {
-		0% {opacity: 0; float: left;}
-		44% {opacity: 0; float: left;}
-		45% {opacity: 1; float: left;}
-		98% {opacity: 1; float: left;}
-		99% {opacity: 0; float: left;}
-		100% {opacity: 0; float: left;}
-	}
+img.portfolio_images_pop.blgbeyondtwo, video.portfolio_images_pop.blgbeyondtwo {
+	display: block;
+	position: relative;
+	width: 550px;
+	height: auto;
+	padding-top: 1%;
+	margin-left: auto;
+	margin-right: auto;
+	animation: blgbeyondonetwo 13s infinite;
+	animation-play-state: initial;
+}
+@-webkit-keyframes blgbeyondonetwo {
+	0% {display: none;}
+	26% {display: none;}
+	27% {display: inherit;}
+	74% {display: inherit;}
+	75% {display: none;}
+	100% {display: none;}
+}
+@keyframes blgbeyondonetwo {
+	0% {display: none;}
+	26% {display: none;}
+	27% {display: inherit;}
+	74% {display: inherit;}
+	75% {display: none;}
+	100% {display: none;}
+}
 
-	img.portfolio_images_pop.oneflowtwo {
-		position: absolute;
-		width: 100%;
-		height: auto;
-		transform: scale(1.03);
-		opacity: inherit;
-		padding-top: 1%;
-		margin-left: auto;
-		margin-right: auto;
-		animation: blakesdotcomonefirstbphone ease-in-out 16s infinite;
-	}
-	@-webkit-keyframes blakesdotcomonefirstbphone {
-		0% {opacity: 1; -webkit-float: left;}
-		46% {opacity: 1; -webkit-float: left;}
-		47% {opacity: 0; -webkit-float: left;}
-		97% {opacity: 0; -webkit-float: left;}
-		98% {opacity: 1; -webkit-float: left;}
-		100% {opacity: 1; -webkit-float: left;}
-	}
-	@keyframes blakesdotcomonefirstbphone {
-		0% {opacity: 1; float: left;}
-		46% {opacity: 1; float: left;}
-		47% {opacity: 0; float: left;}
-		97% {opacity: 0; float: left;}
-		98% {opacity: 1; float: left;}
-		100% {opacity: 1; float: left;}
-	}
-
-	img.portfolio_images_pop.twoflowtwo, video.portfolio_images.twoflowtwo  {
-		position: relative;
-		display: inherit;
-		width: 100%;
-		height: auto;
-		transform: scale(1.03);
-		padding-top: 1%;
-		margin-left: auto;
-		margin-right: auto;
-		animation: blakesdotcomtwosecondbphone ease-in-out 16s infinite;
-	}
-	@-webkit-keyframes blakesdotcomtwosecondbphone {
-		0% {opacity: 0; -webkit-float: left;}
-		44% {opacity: 0; -webkit-float: left;}
-		45% {opacity: 1; -webkit-float: left;}
-		98% {opacity: 1; -webkit-float: left;}
-		99% {opacity: 0; -webkit-float: left;}
-		100% {opacity: 0; -webkit-float: left;}
-	}
-	@keyframes blakesdotcomtwosecondbphone {
-		0% {opacity: 0; float: left;}
-		44% {opacity: 0; float: left;}
-		45% {opacity: 1; float: left;}
-		98% {opacity: 1; float: left;}
-		99% {opacity: 0; float: left;}
-		100% {opacity: 0; float: left;}
-	}
 
 img.portfolio_images_pop.innovatescroll {
 	display: block;
@@ -252,50 +193,6 @@ img.portfolio_images.twoflowtwo, video.portfolio_images.twoflowtwo  {
 	96% {transition: opacity 1, display 2s; opacity: 1; display: inline-block;}
 	97% {transition: opacity 0, display 2s; opacity: 0; display: none;}
 	100% {transition: opacity 0, display 2s; opacity: 0; display: none;}
-}
-
-img.portfolio_images.blakesdotcomone {
-	position: relative;
-	width: 100%;
-	height: auto;
-	display: inherit;
-	transform: scale(1.03);
-	height: auto;
-	opacity: inherit;
-	padding-top: 1%;
-	margin-left: auto;
-	margin-right: auto;
-	animation: blakesdotcomonefirst ease-in-out 16s infinite;
-}
-
-@keyframes blakesdotcomonefirst {
-	0% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-	45% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-	46% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
-	97% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
-	98% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-	100% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-}
-
-img.portfolio_images.blakesdotcomtwo, video.portfolio_images.blakesdotcomtwo {
-	position: relative;
-	display: inherit;
-	width: 100%;
-	height: auto;
-	transform: scale(1.03);
-	height: auto;
-	padding-top: 1%;
-	margin-left: auto;
-	margin-right: auto;
-	animation: blakesdotcomtwosecond ease-in-out 16s infinite;
-}
-@keyframes blakesdotcomtwosecond {
-	0% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
-	44% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
-	45% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-	98% {/*transition: opacity 1, display 2s; opacity: 1;*/ display: inherit;}
-	99% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
-	100% {/*transition: opacity 0, display 2s; opacity: 0;*/ display: none;}
 }
 
 img.portfolio_images_pop.blakesfirst {
@@ -1511,7 +1408,7 @@ label.menu__btn {
 
 	img.portfolio_images_pop.blgbeyondone {
 		display: block;
-		position: relative;
+		position: absolute;
 		width: 98vw;
 		height: auto;
 		padding: 10px 4px 5px;
@@ -1520,24 +1417,24 @@ label.menu__btn {
 		animation: blgbeyondoneonephone 13s infinite;
 	}
 	@-webkit-keyframes blgbeyondoneonephone {
-		0% {-webkit-display: inherit;}
-		25% {-webkit-display: inherit;}
-		26% {-webkit-display: none;}
-		75% {-webkit-display: none;}
-		76% {-webkit-display: inherit;}
-		100% {-webkit-display: inherit;}
+		0% {opacity: 1; -webkit-float: left;}
+		25% {opacity: 1; -webkit-float: left;}
+		26% {opacity: 0; -webkit-float: left;}
+		75% {opacity: 0; -webkit-float: left;}
+		76% {opacity: 1; -webkit-float: left;}
+		100% {opacity: 1; -webkit-float: left;}
 	}
 	@keyframes blgbeyondoneonephone {
-		0% {display: inherit;}
-		25% {display: inherit;}
-		26% {display: none;}
-		75% {display: none;}
-		76% {display: inherit;}
-		100% {display: inherit;}
+		0% {opacity: 1; -webkit-float: left;}
+		25% {opacity: 1; -webkit-float: left;}
+		26% {opacity: 0; -webkit-float: left;}
+		75% {opacity: 0; -webkit-float: left;}
+		76% {opacity: 1; -webkit-float: left;}
+		100% {opacity: 1; -webkit-float: left;}
 	}
 
 	img.portfolio_images_pop.blgbeyondtwo {
-		display: block;
+		display: inline-block;
 		position: relative;
 		width: 98vw;
 		height: auto;
@@ -1547,20 +1444,20 @@ label.menu__btn {
 		animation: blgbeyondonetwophone ease-in-out 13s infinite;
 	}
 	@-webkit-keyframes blgbeyondonetwophone {
-		0% {-webkit-display: none;}
-		26% {-webkit-display: none;}
-		27% {-webkit-display: inherit;}
-		74% {-webkit-display: inherit;}
-		75% {-webkit-display: none;}
-		100% {-webkit-display: none;}
+		0% {opacity: 0; -webkit-float: left;}
+		26% {opacity: 0; -webkit-float: left;}
+		27% {opacity: 1; -webkit-float: left;}
+		74% {opacity: 1; -webkit-float: left;}
+		75% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
 	}
 	@keyframes blgbeyondonetwophone {
-		0% {display: none;}
-		26% {display: none;}
-		27% {display: inherit;}
-		74% {display: inherit;}
-		75% {display: none;}
-		100% {display: none;}
+		0% {opacity: 0; float: left;}
+		26% {opacity: 0; float: left;}
+		27% {opacity: 1; float: left;}
+		74% {opacity: 1; float: left;}
+		75% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
 	}
 
 	img.portfolio_images_pop.innovatescroll {
@@ -1574,12 +1471,12 @@ label.menu__btn {
 		animation: innovatescrollingphone ease-in-out  13s infinite;
 	}
 	@-webkit-keyframes innovatescrollingphone {
-		0% {-webkit-display: none;}
-		26% {-webkit-display: none;}
-		27% {-webkit-display: inherit; object-fit: cover; object-position: 0px 0px;}
-		74% {-webkit-display: inherit; object-fit: cover; object-position: 0px -825px;}
-		75% {-webkit-display: none;}
-		100% {-webkit-display: none;}
+		0% {opacity: 0; -webkit-float: left;}
+		26% {opacity: 0; -webkit-float: left;}
+		27% {opacity: 1; -webkit-float: left; object-fit: cover; object-position: 0px 0px;}
+		74% {opacity: 1; -webkit-float: left; object-fit: cover; object-position: 0px -825px;}
+		75% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
 	}
 		@keyframes innovatescrollingphone {
 		0% {display: none;}
