--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -1461,7 +1461,7 @@ label.menu__btn {
 	}
 
 	img.portfolio_images_pop.innovatescroll {
-		display: block;
+		display: inline-block;
 		position: relative;
 		height: 100vw;
 		width: 98vw;
@@ -1479,17 +1479,17 @@ label.menu__btn {
 		100% {opacity: 0; -webkit-float: left;}
 	}
 		@keyframes innovatescrollingphone {
-		0% {display: none;}
-		26% {display: none;}
-		27% {display: inherit; object-fit: cover; object-position: 0px 0px;}
-		74% {display: inherit; object-fit: cover; object-position: 0px -825px;}
-		75% {display: none;}
-		100% {display: none;}
+		0% {opacity: 0; float: left;}
+		26% {opacity: 0; float: left;}
+		27% {opacity: 1; float: left; object-fit: cover; object-position: 0px 0px;}
+		74% {opacity: 1; float: left; object-fit: cover; object-position: 0px -825px;}
+		75% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
 	}
 
 	img.portfolio_images_pop.blakesfirst {
 		display: block;
-		position: relative;
+		position: absolute;
 		height: auto;
 		width: 98vw;
 		padding: 10px 4px 5px;
@@ -1498,25 +1498,25 @@ label.menu__btn {
 		animation: blakesuxuifirst ease-in-out 13s infinite;
 	}
 	@-webkit-keyframes blakesuxuifirst {
-		0% {-webkit-display: inherit;}
-		23% {-webkit-display: inherit;}
-		24% {-webkit-display: none;}
-		90% {-webkit-display: none;}
-		91% {-webkit-display: inherit;}
-		100% {-webkit-display: inherit;}
+		0% {opacity: 1; -webkit-float: left;}
+		23% {opacity: 1; -webkit-float: left;}
+		24% {opacity: 0; -webkit-float: left;}
+		90% {opacity: 0; -webkit-float: left;}
+		91% {opacity: 1; -webkit-float: left;}
+		100% {opacity: 1; -webkit-float: left;}
 	}
 	@keyframes blakesuxuifirst {
-		0% {display: inherit;}
-		23% {display: inherit;}
-		24% {display: none;}
-		90% {display: none;}
-		91% {display: inherit;}
-		100% {display: inherit;}
+		0% {opacity: 1; float: left;}
+		23% {opacity: 1; float: left;}
+		24% {opacity: 0; float: left;}
+		90% {opacity: 0; float: left;}
+		91% {opacity: 1; float: left;}
+		100% {opacity: 1; float: left;}
 	}
 
 	img.portfolio_images_pop.blakessecond {
 		display: block;
-		position: relative;
+		position: absolute;
 		height: auto;
 		width: 98vw;
 		padding: 10px 4px 5px;
@@ -1525,24 +1525,24 @@ label.menu__btn {
 		animation: blakesuxuisecond ease-in-out 13s infinite;
 	}
 	@-webkit-keyframes blakesuxuisecond {
-		0% {-webkit-display: none;}
-		24% {-webkit-display: none;}
-		25% {-webkit-display: inherit;}
-		55% {-webkit-display: inherit;}
-		56% {-webkit-display: none;}
-		100% {-webkit-display: none;}
+		0% {opacity: 0; -webkit-float: left;}
+		24% {opacity: 0; -webkit-float: left;}
+		25% {opacity: 1; -webkit-float: left;}
+		55% {opacity: 1; -webkit-float: left;}
+		56% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
 	}
 	@keyframes blakesuxuisecond {
-		0% {display: none;}
-		24% {display: none;}
-		25% {display: inherit;}
-		55% {display: inherit;}
-		56% {display: none;}
-		100% {display: none;}
+		0% {opacity: 0; float: left;}
+		24% {opacity: 0; float: left;}
+		25% {opacity: 1; float: left;}
+		55% {opacity: 1; float: left;}
+		56% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
 	}
 
 	img.portfolio_images_pop.blakesthird {
-		display: block;
+		display: inline-block;
 		position: relative;
 		height: auto;
 		width: 98vw;
@@ -1552,20 +1552,107 @@ label.menu__btn {
 		animation: blakesuxuithird ease-in-out 13s infinite;
 	}
 	@-webkit-keyframes blakesuxuithird {
-		0% {-webkit-display: none;}
-		56% {-webkit-display: none;}
-		57% {-webkit-display: inherit;}
-		89% {-webkit-display: inherit;}
-		90% {-webkit-display: none;}
-		100% {-webkit-display: none;}
+		0% {opacity: 0; -webkit-float: left;}
+		56% {opacity: 0; -webkit-float: left;}
+		57% {opacity: 1; -webkit-float: left;}
+		89% {opacity: 1; -webkit-float: left;}
+		90% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
 	}
 	@keyframes blakesuxuithird {
-		0% {display: none;}
-		56% {display: none;}
-		57% {display: inherit;}
-		89% {display: inherit;}
-		90% {display: none;}
-		100% {display: none;}
+		0% {opacity: 0; float: left;}
+		56% {opacity: 0; float: left;}
+		57% {opacity: 1; float: left;}
+		89% {opacity: 1; float: left;}
+		90% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
+	}
+
+	img.portfolio_images.mickey100 {
+		position: absolute;
+		display: inline-block;
+		width: 100%;
+		height: auto;
+		transform: scale(1.03);
+		height: auto;
+		padding-top: 1%;
+		margin-left: auto;
+		margin-right: auto;
+		animation: mickeyportfirst 16s infinite;
+	}
+	@-webkit-keyframes mickeyportfirst {
+		0% {opacity: 1; -webkit-float: left;}
+		11% {opacity: 1; -webkit-float: left;}
+		12% {opacity: 0; -webkit-float: left;}
+		40% {opacity: 0; -webkit-float: left;}
+		41% {opacity: 1; -webkit-float: left;}
+		100% {opacity: 1; -webkit-float: left;}
+	}
+	@keyframes mickeyportfirst {
+		0% {opacity: 1; float: left;}
+		11% {opacity: 1; float: left;}
+		12% {opacity: 0; float: left;}
+		40% {opacity: 0; float: left;}
+		41% {opacity: 1; float: left;}
+		100% {opacity: 1; float: left;}
+	}
+
+	img.portfolio_images.mickey100disney {
+		position: absolute;
+		display: inline-block;
+		width: 100%;
+		height: auto;
+		transform: scale(1.03);
+		height: auto;
+		padding-top: 1%;
+		margin-left: auto;
+		margin-right: auto;
+		animation: mickeyportdisney 16s infinite;
+	}
+	@-webkit-keyframes mickeyportdisney {
+		0% {opacity: 0; -webkit-float: left;}
+		10% {opacity: 0; -webkit-float: left;}
+		11% {opacity: 1; -webkit-float: left;}
+		27% {opacity: 1; -webkit-float: left;}
+		28% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
+	}
+	@keyframes mickeyportdisney {
+		0% {opacity: 0; float: left;}
+		10% {opacity: 0; float: left;}
+		11% {opacity: 1; float: left;}
+		27% {opacity: 1; float: left;}
+		28% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
+	}
+
+	img.portfolio_images.mickey100uniqlo {
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		height: auto;
+		transform: scale(1.03);
+		height: auto;
+		padding-top: 1%;
+		margin-left: auto;
+		margin-right: auto;
+		animation: mickeyportuniqlo 16s infinite;
+	}
+	@-webkit-keyframes mickeyportuniqlo {
+		0% {opacity: 0; -webkit-float: left;}
+		26% {opacity: 0; -webkit-float: left;}
+		27% {opacity: 1; -webkit-float: left;}
+		41% {opacity: 1; -webkit-float: left;}
+		42% {opacity: 0; -webkit-float: left;}
+		100% {opacity: 0; -webkit-float: left;}
+	}
+	@keyframes mickeyportuniqlo {
+		0% {opacity: 0; float: left;}
+		26% {opacity: 0; float: left;}
+		27% {opacity: 1; float: left;}
+		41% {opacity: 1; float: left;}
+		42% {opacity: 0; float: left;}
+		100% {opacity: 0; float: left;}
 	}
 
 
