--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -411,8 +411,8 @@ label.menu__btn {
 	}
 @keyframes hamburgerfademonitor {
 	0% {opacity: 1;}
-	3% {opacity: 1;}
-	5% {opacity: 0;}
+	2% {opacity: 1;}
+	3% {opacity: 0;}
 	100% {opacity: 0;}
 }
 
@@ -719,7 +719,7 @@ label.menu__btn {
   .container_contacts{
     zoom: 85%;
 	 margin-top: 1.5%;
-	 width: 30%;
+	 width: 700px;
 	 height: 10vh;
 	 margin-left: auto;
 	 margin-right: auto;
@@ -890,9 +890,9 @@ label.menu__btn {
   h4  > a:visited,
   h4  > a:link,
   h4  > a:active{
-    padding: 5px 10px 0px 10px;
+    padding: 5px 30px 0px 30px;
     opacity: 1;
-    font-size: 1.5vw;
+    font-size: 18pt;
     text-transform: lowercase;
   }
 
