--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -17,7 +17,7 @@
   flex-direction: row;
   justify-content: space-around;
   vertical-align: middle;
-  width: 30%;
+  width: 700px;
   height: 100px;
   margin-top: 3%;
   margin-left: auto;
