--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -372,8 +372,8 @@ img.portfolio_images.mickey100uniqlo {
   line-height: 2;
   opacity: 1;
   padding-left: 7%;
-  margin-top: 3%;
-  margin-bottom:2%;
+  margin-top: 5px;
+  margin-bottom:5px;
   text-align: left;
 
 	}
@@ -1262,7 +1262,7 @@ label.menu__btn {
 	}
 
 	p.resume-prompt{
-		display: inherit;
+		display: block;
 		margin-left: 1px;
   color: gray;
   font-family: 'Lato', serif;
@@ -1272,9 +1272,9 @@ label.menu__btn {
   opacity: 1;
   padding-left: 10%;
 	padding-right: 10%;
-	padding-top: 10%;
-  margin-top: 10%;
-  margin-bottom:2%;
+	padding-top: 5px;
+  margin-top: 5px;
+  margin-bottom:5px;
   text-align: left;
 	}
 
